@@ -196,6 +196,8 @@ up                             "Go Up &uarr;"
 upload                         "File Upload"
 uptitle                        "Go up one folder level"
 user                           "user:"
+varnowformat                   "%A %B %d %Y"
+vartimeformat                 "%I:%M:%S"
 viewoptions                    "View Options"
 webdavfolderisfiltered         ""
 writeable                      "w"
